--- a/.env
+++ b/.env
@@ -17,3 +17,10 @@
 APP_ENV=dev
 APP_SECRET=bd06e40806a94e1c2054ee6a04ee3da6
 ###< symfony/framework-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
