--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -3,5 +3,5 @@ framework:
         transports:
              async: '%env(MESSENGER_TRANSPORT_DSN)%'
 
-        routing:
-            'App\Message\LeadSentNotification': async
+#        routing:
+#            'App\Message\LeadSentNotification': async
